--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,8 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/container/container.css);
 @import url(../blocks/page/page.css);
+
+/* Header */
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
