--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,3 +11,19 @@
   outline: none;
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__add-button {
+    width: 120px;
+    height: 50px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .profile__add-button {
+    width: 282px;
+
+    margin: 30px 0 0;
+  }
+}
