--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,3 +13,17 @@
   outline: none;
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .profile__edit-button {
+    margin-left: 8px;
+  }
+}
