--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,4 +5,23 @@
   line-height: 1.33;
   font-weight: 500;
   color: #fff;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1024px) {
+  .profile__name {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .profile__name {
+    margin: 20px 0 0 0;
+
+    font-size: 27px;
+    line-height: 2.07;
+  }
 }
