--- a/pages/index.css
+++ b/pages/index.css
@@ -1,48 +1,48 @@
-@import url(../vendor/normalize.css);
-@import url(../fonts/fonts.css);
-@import url(../blocks/content/content.css);
-@import url(../blocks/container/container.css);
-@import url(../blocks/page/page.css);
+@import url('../vendor/normalize.css');
+@import url('../fonts/fonts.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/container/container.css');
+@import url('../blocks/page/page.css');
 
 /* Header */
 
-@import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo/header__logo.css);
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
 
 /* Profile */
 
-@import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__add-button/profile__add-button.css);
-@import url(../blocks/profile/__avatar/profile__avatar.css);
-@import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__name/profile__name.css);
-@import url(../blocks/profile/__profession/profile__profession.css);
-@import url(../blocks/profile/__wrap/profile__wrap.css);
-@import url(../blocks/profile/__container/profile__container.css);
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__add-button/profile__add-button.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__edit-button/profile__edit-button.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__name/profile__name.css');
+@import url('../blocks/profile/__profession/profile__profession.css');
+@import url('../blocks/profile/__wrap/profile__wrap.css');
+@import url('../blocks/profile/__container/profile__container.css');
 
 /* Grid-photos */
 
-@import url(../blocks/grid-photos/grid-photos.css);
-@import url(../blocks/grid-photos/__grid-item/grid-photos__grid-item.css);
-@import url(../blocks/grid-photos/__image/grid-photos__image.css);
-@import url(../blocks/grid-photos/__like/grid-photos__like.css);
-@import url(../blocks/grid-photos/__name/grid-photos__name.css);
-@import url(../blocks/grid-photos/__wrap/grid-photos__wrap.css);
+@import url('../blocks/grid-photos/grid-photos.css');
+@import url('../blocks/grid-photos/__grid-item/grid-photos__grid-item.css');
+@import url('../blocks/grid-photos/__image/grid-photos__image.css');
+@import url('../blocks/grid-photos/__like/grid-photos__like.css');
+@import url('../blocks/grid-photos/__name/grid-photos__name.css');
+@import url('../blocks/grid-photos/__wrap/grid-photos__wrap.css');
 
 /* Footer */ 
 
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
 
 /* Popup */
 
-@import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__button-save/popup__button-save.css);
-@import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__profession/popup__profession.css);
-@import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/__button-save/popup__button-save.css');
+@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/__name/popup__name.css');
+@import url('../blocks/popup/__profession/popup__profession.css');
+@import url('../blocks/popup/__title/popup__title.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__button-close/popup__button-close.css');
