--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -2,7 +2,7 @@
   width: 358px;
   height: 50px;
 
-  margin: 48px auto 0;
+  margin: 48px auto 36px;
 
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-size: 18px;
