refactor: grid-item переделан в блок по БЭМ

--- a/blocks/grid-item/__like/grid-item__like.css
+++ b/blocks/grid-item/__like/grid-item__like.css
@@ -1,4 +1,4 @@
-.grid-photos__like {
+.grid-item__like {
   width: 20px;
   height: 18px;
 
@@ -10,6 +10,6 @@
   border: none;
 }
 
-.grid-photos__like:hover {
+.grid-item__like:hover {
   cursor: pointer;
 }
