--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,8 @@
 .popup {
+  display: flex;
   width: 100vw;
   height: 100vh;
 
-  display: none;
   justify-content: center;
   align-items: center;
 
@@ -11,4 +11,9 @@
   left: 0;
 
   background: rgba(0, 0, 0, .5);
+
+  visibility: hidden;
+  transition: opacity 500ms linear, visibility 0.5s linear ;
+  opacity: 0;
+
 }
