--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,5 @@
 @import url('../blocks/popup/__button-close/popup__button-close.css');
 @import url('../blocks/popup/__input/_name/popup__input_name_name.css');
 @import url('../blocks/popup/__input/_name/popup__input_name_profession.css');
+@import url('../blocks/popup/__input/_name/popup__input_name_title-card.css');
+@import url('../blocks/popup/__input/_name/popup__input_name_link-card.css');
