--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,10 +1,11 @@
 .popup__button-close {
   width: 40px;
   height: 40px;
-  position: relative;
-  top: -180px;
-  left: 230px;
-
+  position: absolute;
+  /* top: -10%;
+  left: 99%; */
+  top: calc(0% - 40px);
+  left: 100%;
   background-image: url(../../../images/closeButton.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -20,20 +21,18 @@
   transition: ease 1s;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
   .popup__button-close {
-    width: 30px;
-    height: 30px;
-    top: -180px;
-    left: 190px;
+    width: 24px;
+    height: 24px;
+    top: calc(0% - 24px);
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
   .popup__button-close {
     width: 20px;
     height: 20px;
-    top: -175px;
-    left: 140px;
+    top: calc(0% - 20px);
   }
 }
