refactor: переписать лайк на svg для возможно применения анимации

--- a/blocks/grid-item/__like/_liked/grid-item__like_liked.css
+++ b/blocks/grid-item/__like/_liked/grid-item__like_liked.css
@@ -1,4 +1,3 @@
 .grid-item__like_liked {
-  background-image: url(../../../../images/likeButton_liked.svg);
-  background-color: red;
+  fill: #000;
 }
