--- a/blocks/grid-item/__like/grid-item__like.css
+++ b/blocks/grid-item/__like/grid-item__like.css
@@ -1,16 +1,7 @@
 .grid-item__like {
-  width: 20px;
-  height: 18px;
-
-  background-image: url(../../../images/likeButton.svg) ;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #fff;
-
-  border: none;
-  outline: none;
-  /* transition: .2s linear; */
-  background-color: black;
+  fill: #fff;
+  stroke: #000;
+  transition: .2s linear;
 }
 
 .grid-item__like:hover {
