--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,6 +20,8 @@
 @import url('../blocks/profile/__profession/profile__profession.css');
 @import url('../blocks/profile/__wrap/profile__wrap.css');
 @import url('../blocks/profile/__container/profile__container.css');
+@import url('../blocks/profile/__avatar-avatar-wrapp/__avatar-avatar-wrapp.css');
+@import url('../blocks/profile/__avatar-edit/__avatar-edit.css');
 
 /* Grid-photos */
 
