--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -61,3 +61,4 @@
 @import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
 @import url('../blocks/popup/__input/_type/popup__input_type_error.css');
 @import url('../blocks/popup/__button-save/_inactive/popup__button-save_inactive.css');
+@import url('../blocks/popup/__input/_name/popup__input_name_link-avatar.css');
